<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/pastel_blue"
    android:visibility="visible">

    <ImageView
...

    <Button
        android:id="@+id/editButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/taskCompleteToggleButton"
        android:layout_alignParentEnd="true"
        android:elevation="10dp"
        android:textColor="@color/primary_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
...

    <TextView
        android:id="@+id/taskDifficultyTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/taskNameTextView"
        android:text="@string/difficulty"
        android:textColor="@color/pastel_blue"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
...
